tried to use gem mail_form

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,6 @@
 <h1>Conversion Actions</h1>
 <h3>Kontaktformular</h3>
-  <%# <%= render "form", page: @page %>
+  <%# <%= render "form-contact", contact: @contact %> %>
   <a href="/thankyou/email">Kontaktformular absenden</a>
 <h3>Buchung</h3>
   <ul>
@@ -9,7 +9,7 @@
     <li>Artikel 3, 30 Euro</li>
   </ul>
 <h4>Warenkorb</h4>
-      <a href="/thankyou/order">Bestellen</a>
+  <a href="/thankyou/order">Bestellen</a>
 <h3>Kontakt (Email)</h3>
   <a href="mailto:ctroeger@google.com">Email senden</a>
 <h3>Klick auf externen Link</h3>
