--- a/app/views/pages/thanksemail.html.erb
+++ b/app/views/pages/thanksemail.html.erb
@@ -2,3 +2,5 @@
 <p>Your message was successfully sent.</p>
 <p><em><%= "TODO: hidden email address in datalayer" %></em></p>
 <%= link_to "Back", root_path %>
+  <%= render "form-contact" %>
+  <%= render "form" %>
