--- a/app/views/pages/thanksemail.html.erb
+++ b/app/views/pages/thanksemail.html.erb
@@ -1,6 +1,8 @@
 <h3>Thank you for your message.</h3>
 <p>Your message was successfully sent.</p>
 <p><em><%= "TODO: hidden email address in datalayer" %></em></p>
+<p><%= params[:email] %></p>
 <%= link_to "Back", root_path %>
-  <%= render "form-contact" %>
-  <%= render "form" %>
+<%# <% raise %> %>
+  <%# <%= render "contact" %> %>
+  <%# <%= render "form" %> %>
