--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -1,4 +1,7 @@
+  <%= render "pages/contact" %>
+  <br>
 
+  <%# same as in _contact.html.erb %>
   <%= form_for @contact do |f| %>
     <% if flash[:error].present? %>
         <p> flash[:error]</p>
@@ -21,3 +24,4 @@
 
     <%= f.submit 'Send Message', class: "button" %>
   <% end %>
+  <%# same as in _contact.html.erb %>
